<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">



    <EditText
        android:id="@+id/editTextColor"
        android:layout_width="138dp"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/Color"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextProducto_Nombre" />

    <EditText
        android:id="@+id/editTextDatos_Adicional_Producto"
        android:layout_width="287dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/Datos_adicional_producto"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPrecio" />

    <EditText
        android:id="@+id/editTextDescripcion"
        android:layout_width="287dp"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/Descripcion"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPeso_Neto" />

    <EditText
        android:id="@+id/editTextPeso_Neto"
        android:layout_width="173dp"
        android:layout_height="41dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="@string/Peso_Neto"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextColor" />

    <EditText
        android:id="@+id/editTextPrecio"
        android:layout_width="109dp"
        android:layout_height="47dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/Precio"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDescripcion" />

    <EditText
        android:id="@+id/editTextProducto_Nombre"
        android:layout_width="263dp"
        android:layout_height="37dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="68dp"
        android:ems="10"
        android:hint="@string/Producto_Nombre"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButtonGrabar"
        android:layout_width="54dp"
        android:layout_height="53dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="380dp"
        android:onClick="buttonGrabarClick"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_save" />

    <ImageButton
        android:id="@+id/imageButtonModificar"
        android:layout_width="51dp"
        android:layout_height="55dp"
        android:layout_marginStart="152dp"
        android:layout_marginTop="380dp"
        android:onClick="buttonGrabarClick"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_rotate" />


    <Button
        android:id="@+id/buttons"
        android:layout_width="47dp"
        android:layout_height="48dp"
        android:layout_marginEnd="37dp"
        android:layout_marginStart="300dp"
        android:layout_marginTop="4dp"
        android:background="@android:drawable/ic_menu_set_as"
        android:backgroundTint="@android:color/background_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="16dp"
        android:text="@string/Registro_de_Maquillajes"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnFoto"
        android:layout_width="55dp"
        android:layout_height="40dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="8dp"
        android:background="@android:drawable/ic_menu_camera"
        android:backgroundTint="@color/colorPrimary"
        android:elevation="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fotom" />

    <TextView
        android:id="@+id/fotom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/Foto_del_maquillaje"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        android:textStyle="bold|italic"
        app:layout_constraintTop_toBottomOf="@+id/imageButtonGrabar"
        tools:layout_editor_absoluteX="16dp" />

    <ImageButton
        android:id="@+id/imagen"
        android:layout_width="150dp"
        android:layout_height="107dp"
        android:layout_marginStart="176dp"
        android:layout_marginTop="456dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_report_image" />

    <Button
        android:id="@+id/buttonEliminar"
        android:layout_width="62dp"
        android:layout_height="49dp"
        android:layout_marginStart="240dp"
        android:layout_marginTop="380dp"
        android:background="@android:drawable/ic_menu_delete"
        android:backgroundTint="@android:color/black"
        android:onClick="remove"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</android.support.constraint.ConstraintLayout>